# Southpaw

./: .gitignore  README.md  export_db.py  start-all.ps1
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/routes/: battle.py  monsters.py
backend/app/core/: config.py
backend/app/db/: database.py  seed.py
backend/app/domain/: contracts.py
backend/app/models/: battle_room.py  monster.py
backend/app/schemas/: battle.py  monster.py
backend/app/services/: ability_engine.py  battle_service.py  monster_service.py
backend/data/: test-battle-persistence.db-journal
backend/southpaw_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: ability-engine-contract.md  ability-system.md  architecture.md  battle-mode.md  card-standard.md  mj_promp_dinamic.md  monster-creation-prompt.md  monster-prototypes-with-mj-brief.md  monster-prototypes-with-mj-brief.pt.2.md  monster-prototypes.md  stack.md  world-lore.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/components/: BattleArena.tsx  BattleCard.tsx  BattleHandSection.tsx  BattleSidebarCard.tsx  BattlefieldSection.tsx  MonsterCard.tsx
frontend/src/features/battle/: types.ts
frontend/src/features/monsters/: queries.ts  types.ts
frontend/src/styles/: global.css
